--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqp-ts": "^1.5.0",
+    "amqplib": "^0.5.5",
+    "bunyan": "^1.8.12",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "soap": "^0.29.0"
   }
