--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqp-ts": "^1.5.0",
+    "amqp-connection-manager": "^3.0.0",
     "amqplib": "^0.5.5",
     "bunyan": "^1.8.12",
     "dotenv": "^8.1.0",
